           method, though. However, there's still another call to DESTROY() 
           during the GDP.
    * (ms) Kevin's idea is in now, on localizing $? in the L4p global END {} 
           block. It prevents logdie() et. al from exiting with unwanted
           exit codes when global cleanup / global destruction modifies $?,
           as seen by Tim with the Email appender.

0.45 (05/23/2004)
    * (ms) fix for t/045Composite.t on perl 5.6.1 by Jeff Macdonald 
           <jeff.macdonald@e-dialog.com> (specify number of test cases,
           getting rid of no_plan).
    * (ms) Dennis Gregorovic <dgregor@redhat.com> provided a patch to 
           protect applications who are tinkering with $/. It is set
           to "\n" now locally when L4p is reading the conf file. Added
           a test case to t/004Config.t.
    * (ms) Fixed a documentation error with initialized(), pointed 
           out by Victor Felix <vfelix@tigr.org>.

0.44 (04/25/2004)
    * (ms) added filename() method to L4P::Appender::File as suggested 
           by Lee Carmichael <lecar_red@yahoo.com>
    * (ms) added RRDs appender Log::Log4perl::Appender::RRDs and testcases
    * (ms) fixed Log::Log4perl::Appender to check if a an appender package
           has already been loaded and skip 'require' in this case. 
           Packages injected via Class::Prototyped caused an error with this.
    * (ms) Extended the FAQ's "How can I write my own appender?" on
           how to dynamically create new appenders via Class::Prototyped.

0.43 (03/22/2004)
    * (ms) Applied patch by Markus Peter <warp@spin.de> for 'pipe'
           mode in Log::Log4perl::Appender::File
    * (ms) Added composite appender Log::Log4perl::Appender::Limit to
           limit message delivery to adjustable time windows.
    * (ms) Fixed last 033UsrCspec.t test case to run on Win32 as well
           (path fixed).
    * (ms) Lars Thegler <lars@thegler.dk> provided a patch to keep 
           compatibility with 5.005_03.