@@ -17,6 +17,8 @@
            block. It prevents logdie() et. al from exiting with unwanted
            exit codes when global cleanup / global destruction modifies $?,
            as seen by Tim with the Email appender.
+    * (ms) Dave Viner <dviner@yahoo-inc.com> added isLevelEnabled() methods
+           as aliases to is_level().
 
 0.45 (05/23/2004)
     * (ms) fix for t/045Composite.t on perl 5.6.1 by Jeff Macdonald 
